--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": ":vendor_name/:package_name",
-    "description": ":package_description",
+    "name": "almesery/laravel-bosta",
+    "description": "laravel-bosta",
     "keywords": [
-        ":vendor_name",
-        ":package_name"
+        "almesery",
+        "laravel-bosta"
     ],
-    "homepage": "https://github.com/:vendor_name/:package_name",
+    "homepage": "https://github.com/almesery/laravel-bosta",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
+            "name": "almesery",
+            "email": "abdelrahman.pme18@suezuni.edu.eg",
             "role": "Developer"
         }
     ],
@@ -27,13 +27,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Spatie\\Skeleton\\": "src",
-            "Spatie\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Almesery\\Bosta\\": "src",
+            "Almesery\\Bosta\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Spatie\\Skeleton\\Tests\\": "tests"
+            "Almesery\\Bosta\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -47,10 +47,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Spatie\\Skeleton\\SkeletonServiceProvider"
+                "Almesery\\Bosta\\BostaServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "Spatie\\Skeleton\\SkeletonFacade"
+                "Bosta": "Almesery\\Bosta\\BostaFacade"
             }
         }
     },
